backend/kubernetes/monitoring-k8s/jhipster-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-grafana
  namespace: sn-ugb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-grafana
  template:
    metadata:
      labels:
        app: jhipster-grafana
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: jhipster-grafana
          image: grafana/grafana:10.2.2
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "200m"
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/grafana-storage
      volumes:
        - name: grafana-storage
          emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-grafana
  namespace: sn-ugb
  labels:
    app: jhipster-grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: jhipster-grafana
---
